--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@rails/webpacker": "5.4.2",
     "bootstrap": "^5.1.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.6.0",
+    "jquery": "3.5.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
